================= Unreleased ==================
; Change ; Minor ; Runtime ; #5505
Added the compiler flags -msse2 -mfpmath=sse for runtime builds using GCC,
the same are used for our FMUs.

; Fixed ; Minor ; Compiler ; #5503
Disabled automatic addition of derivatives for variables with state select set
to prefer if index reduction is disabled.

================= Stable-2017-11-10 ==================
; Change ; Minor ; Compiler ; #5497
Added option for disabling external evaluation during variability propagation

================= Stable-2017-11-02 ==================
; Fixed ; Minor ; Compiler ; #5326
Fixed bug where certain combinations of Integer and enumeration parameters 
gave wrong values of those parameters reported from the FMU.

; Change ; Major ; Tests ; #5489
Divided the test tags stddist, windows and casadi into stddist_base,
stddist_full, windows_base, windows_full, casadi_base and casadi_full. 
The _base indicates tests that should run on both 32 and 64 bit platform 
whereas _full will only be run in one mode. Also the tests tagged with fmi
are now tagged as stddist_base/full. 

; Fixed ; Minor ; PyFMI ; #5494
Fixed problem with binary files that includes spaces in the variable names.

; Feature ; Minor ; Compiler ; #5492
Added common subexpression elimination of builtin math operators.

; Feature ; Major ; Build system ; #5489
Adding posibility to run Python tests in both 32 and 64 bit modes.

; Fixed ; Minor ; Compiler ; #5486
Fixed circularity bug in variability calculation

================= Stable-2017-10-18 ==================
; Change ; Major ; Compiler; #5468
Removed CAD generation

; Fixed ; Minor ; Compiler ; #5478
Fixed a bug where external constant evaluation of functions using external objects did not include all resource annotations

; Fixed ; Minor ; Compiler ; #5482
Fixed a bug where instance tree was kept 

; Change ; Major ; PyFMI; #5479
Changed default file storing method to binary format. 

; Fixed ; Minor ; Build system ; #5459