@@ -1,4 +1,9 @@
 ================= Unreleased ==================
+; Feature ; Major ; Compiler, Runtime ; #5501
+Added a memory pool to be used for dynamic allocations during evaluation
+of the equations (significant speedup in cases with lots of dynamic
+allocations).
+
 ; Change ; Minor ; Runtime ; #5505
 Added the compiler flags -msse2 -mfpmath=sse for runtime builds using GCC,
 the same are used for our FMUs.
